force-app/main/default/objects/Car_Parking__c/Car_Parking__c.object-meta.xml
<CustomObject>
    <label>Car Parking</label>
    <nameField>
        <label>Car Parking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Parking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>