force-app/main/default/objects/Car_Parking__c/fields/Car_Parking_Status__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Status__c</fullName>
    <label>Car Parking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allotted</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Not Alotted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>