force-app/main/default/objects/Car_Parking__c/fields/Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Number__c</fullName>
    <label>Flat Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>