force-app/main/default/objects/Car_Parking__c/fields/Parking_Slot__c.field-meta.xml
<CustomField>
    <fullName>Parking_Slot__c</fullName>
    <label>Parking Slot</label>
    <length>10</length>
    <type>Text</type>
</CustomField>