force-app/main/default/objects/Car_Parking__c/fields/REM__c.field-meta.xml
<CustomField>
    <fullName>REM__c</fullName>
    <label>REM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allotted</fullName>
            </value>
            <value>
                <fullName>Not Alotted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>