force-app/main/default/objects/Car_Parking__c/fields/Sl_No__c.field-meta.xml
<CustomField>
    <fullName>Sl_No__c</fullName>
    <label>Sl. No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>